--- a/style.css
+++ b/style.css
@@ -6,18 +6,23 @@ body, h1, h2, p {
 
 
 body {
+    display: flex;
+    flex-direction: column;
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color:black;
+    color: whitesmoke;
 }
 
 
 header {
-    background: #00d296;
-    color: #fff;
+    background: #222222;
+    color: #00d296;
     padding: 1rem 0;
     text-align: center;
+}
+header h1{
+    text-decoration:  underline;
 }
 
 nav ul {
@@ -38,11 +43,16 @@ nav ul li a {
 
 
 section {
+    align-self: center;
+    width: 70%;
     padding: 20px;
     margin: 20px;
-    background: #fff;
+    background: #3d3d3d;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+section h2{
+    text-decoration: underline;
 }
 
 #instrument-images{
@@ -71,15 +81,17 @@ form label {
 }
 
 form input {
+    background-color: #222222;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #1b1b1b;
     border-radius: 5px;
+    color: white;
 }
 
 form button {
     padding: 10px;
     background: #00d296;
-    color: #fff;
+    color: #000000;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -93,13 +105,17 @@ form button:hover {
 
 
 footer {
-    background: #00d296;
-    color: #fff;
+    background: #222222;
+    color: #ffffff;
     padding: 20px;
     text-align: center;
 }
 
 footer a {
-    color: #fff;
+    color: #ffffff;
     text-decoration: underline;
+}
+.btn{
+    margin-left: 19rem;
+    width: 40%;
 }
