--- a/navbar-redirects/exercises.css
+++ b/navbar-redirects/exercises.css
@@ -13,7 +13,8 @@ body {
 
 .exercises {
     text-align: center;
-    padding: 150px 10% 100px;
+    min-height: 100vh;
+    padding-top:100px;
 }
 
 .exercises h2 {
@@ -112,16 +113,4 @@ footer p a {
     margin: 0 5px;
 }
 
-@media (max-width: 768px) {
-    footer {
-        padding: 1.5rem 0.5rem;
-    }
 
-    footer h2 {
-        font-size: 1.5rem;
-    }
-
-    footer p {
-        font-size: 0.9rem;
-    }
-}
