--- a/navbar-redirects/instruments.css
+++ b/navbar-redirects/instruments.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -8,23 +14,28 @@ html, body {
     color: #e0e0e0;
 }
 
+
 .instruments {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 0;
+    padding-top: 50px;
     background-color: #101010;
     text-align: center;
     flex-direction: column;
 }
 
 .instruments h2 {
-    text-decoration: underline;
     font-size: 2.5em;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     color: #00d296;
     text-transform: uppercase;
+}
+.instruments p {
+    font-size: 1.2em;
+    margin-bottom: 50px;
+    color: #e0e0e0;
 }
 
 .instrument-list {
@@ -38,24 +49,20 @@ html, body {
 
 .instrument-card {
     background-color: #2b2b2b;
-    border-radius: 10px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-    width: 300px;
+    border-radius: 15px;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.5);
+    flex: 1 1 calc(33.333% - 50px);
+    max-width: calc(33.333% - 50px);
+    min-width: 250px;
     padding: 20px;
-    padding-bottom: 40px        ;
+    padding-bottom: 40px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .instrument-card:hover {
     transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-}
-
-.instrument-card img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 15px;
+    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
 }
 
 .instrument-card h3 {
@@ -84,6 +91,7 @@ html, body {
     background-color: #019067;
 }
 
+
 footer {
     background-color: #1a1a1a;
     color: #e0e0e0;
@@ -96,6 +104,7 @@ footer h2 {
     color: #00d296;
     font-size: 2rem;
     margin-bottom: 1rem;
+    font-weight: bold;
 }
 
 footer p {
@@ -117,21 +126,7 @@ footer p a {
     margin: 0 5px;
 }
 
-@media (max-width: 768px) {
-    .instrument-list {
-        flex-direction: column;
-        align-items: center;
-    }
 
-    footer {
-        padding: 1.5rem 0.5rem;
-    }
 
-    footer h2 {
-        font-size: 1.5rem;
-    }
 
-    footer p {
-        font-size: 0.9rem;
-    }
-}
+
